--- a/README
+++ b/README
@@ -1,125 +1,134 @@
-# 🛡️ VPN GUARD (SCG)
+🛡️ VPN GUARD (SCG)
 
-> **Advanced Adaptive VPN Protection Framework** — integrating intelligent routing, identity management, and deception-based defense.
+Advanced Adaptive VPN Protection Framework — integrating intelligent routing, identity management, and deception-based defense.
 
-**ترجمة:** إطار حماية VPN متقدّم يعتمد على التوجيه الذكي، وإدارة الهوية، والدفاع القائم على الخداع.
+ترجمة: إطار حماية VPN متقدّم يعتمد على التوجيه الذكي، وإدارة الهوية، والدفاع القائم على الخداع.
 
----
+⚙️ Overview
 
-## ⚙️ Overview
+VPN GUARD (SCG) يمثل جيلًا جديدًا من أنظمة الدفاع التكيفية وتوجيه البيانات الآمن.
+تم تصميمه لتحقيق أعلى أداء ومرونة، ويجمع بين المنطق المستوحى من الذكاء الاصطناعي والتشفير الديناميكي والخداع السلوكي داخل نواة VPN خفيفة وسريعة.
 
-**VPN GUARD (SCG)** represents a new era in secure routing and adaptive defense systems. Designed for maximum performance and modularity, it merges AI-inspired logic, dynamic encryption, and behavioral deception into a lightweight yet powerful VPN core.
+Core Capabilities:
 
-### 🔹 Core Capabilities
+تحليل متعدد الطبقات (Identity & Deception Engines)
 
-* Intelligent multi-layer analysis (Identity & Deception Engines)
-* Adaptive encrypted routing with randomized paths
-* Real-time health monitoring via **AegisGuardian Bot**
-* Fast async processing using **Tokio** and **SegQueue**
-* Fully modular & expandable design
+توجيه مشفّر متكيّف بمسارات عشوائية
 
----
+مراقبة فورية للحالة عبر AegisGuardian Bot
 
-## 🧩 System Architecture
+معالجة غير متزامنة عالية السرعة باستخدام Tokio و SegQueue
 
-```
+تصميم معياري قابل للتوسع والتطوير
+
+🧩 System Architecture
+
 VPN-GUARD/
 ├── src/
-│   ├── main.rs
-│   ├── orchestrator.rs
-│   ├── guardian.rs
-│   ├── adaptive_router.rs
-│   ├── analysis_engines/
-│   │   ├── identity.rs
-│   │   └── deception.rs
-│   └── grpc_server.rs
+│ ├── main.rs
+│ ├── orchestrator.rs
+│ ├── guardian.rs
+│ ├── adaptive_router.rs
+│ ├── analysis_engines/
+│ │ ├── identity.rs
+│ │ └── deception.rs
+│ └── grpc_server.rs
 ├── proto/
-│   └── vpn_guard.proto
+│ └── vpn_guard.proto
 ├── config/
-│   └── config.example.yaml
+│ └── config.example.yaml
 ├── docs/
-│   └── architecture.svg
+│ └── architecture.svg
 └── README.md
-```
 
----
+🧠 Components Breakdown
 
-## 🧠 Components Breakdown
+🕹️ Orchestrator
+وحدة التحكم المركزية التي تدير تدفق البيانات من الاستقبال حتى التحليل والتوجيه النهائي.
 
-### 🕹️ Orchestrator
+👁️ AegisGuardian Bot
+تعمل كمهمة خلفية مستقلة تراقب مؤشرات الحالة مثل health_flag و queue_size باستخدام قناة mpsc للتنبيهات المنظمة.
 
-The control center that manages request flow — from incoming data, through analysis, to final adaptive routing.
+🔍 Analysis Engines
 
-### 👁️ AegisGuardian Bot
+IdentityManagementEngine: يتحقق من بصمات الجلسات ومستوى الثقة.
 
-Runs as a background async task (`tokio::spawn`) continuously monitoring system health indicators like `health_flag` and `queue_size`. It uses an `mpsc` channel for clean alert messaging.
+DeceptionEngine: ينشئ استجابات دفاعية خادعة تحاكي السلوك التفاعلي لأنظمة الطعم.
 
-### 🔍 Analysis Engines
+🌐 AdaptiveRouter
+مسؤول عن التوجيه المشفّر وتوليد المسارات العشوائية مع دعم للتوزيع الجغرافي أو التوزين الديناميكي.
 
-* **IdentityManagementEngine** → Validates session fingerprints and trust scores.
-* **DeceptionEngine** → Generates defensive deception responses (honeypot-like behavior).
+⚡ SegQueue
+قائمة انتظار داخلية عالية الأداء وآمنة للتعامل المتعدد الخيوط.
 
-### 🌐 AdaptiveRouter
+🧭 System Integration & Logic Design
 
-Responsible for path randomization, encryption, and final route decision. Can implement weighted or geo-aware routing.
+يُظهر هذا القسم كيفية ترابط جميع المكونات داخل النظام لتشكيل بنية متكاملة وذكية.
 
-### ⚡ SegQueue
+Organizational Structure
+تم تقسيم الكود إلى وحدات منطقية مثل AnalysisEngines و AdaptiveRouter و AegisGuardian و AegisOrchestrator لتسهيل القراءة والصيانة.
+كل دالة ومتغير موثق بالغرض والدور داخل النظام.
 
-A high-speed, lock-free internal queue using `crossbeam_queue::SegQueue` for multi-threaded performance.
+AegisGuardian Integration
+يرتبط مباشرة بـ AegisOrchestrator لمراقبة الحالة الداخلية.
+يعمل في مهمة tokio::spawn مستقلة، ويرسل التنبيهات عبر قناة mpsc دون التأثير على عمليات التوجيه.
 
----
+Advanced Enhancements
+تم تنفيذ IdentityManagementEngine و DeceptionEngine كمحركات تحليل متكاملة ضمن سلسلة process_request_internally.
+AdaptiveRouter مسؤول عن توليد المسارات المشفرة بعد التحليل.
+تم تحسين الكفاءة باستخدام SegQueue و tokio::select! مع Notify لإدارة الإيقاف النظيف.
 
-## 🚀 Running Locally
+Flexibility & Resilience
+النظام مصمم ليكون مرنًا في مواجهة الفشل.
+يتم التعامل مع الأخطاء عبر Result و anyhow دون توقف النظام.
+قابلية التوسع تتيح إضافة وحدات تحليل جديدة دون تغيير الهيكل العام.
 
-```bash
-# Start the VPN GUARD server
+Execution
+تبدأ العملية من دالة main التي تجمع كل المكونات، وتبدأ العامل الخلفي، والـ Guardian، وتشغّل خادم gRPC.
+يُستخدم Arc<Mutex<T>> و Arc<AtomicCell<T>> لمشاركة الحالة بأمان بين المهام غير المتزامنة.
+
+🚀 Running Locally
+
 cargo run --bin vpn-guard
-
-# Test via gRPC
 grpcurl -plaintext -d '{"id":"1","payload":"SGVsbG8="}' localhost:50051 vpn.Guard/Process
-```
 
----
+🔒 Security & Reliability
 
-## 🔒 Security & Reliability
+إيقاف أنيق عبر Notify و tokio::select!
 
-* Graceful shutdown via `Notify` and `tokio::select!`
-* Error handling with `Result` and `anyhow`
-* Guardian ensures resilience even under failure
-* Fail-safe design — system continues operation if one engine fails
+معالجة أخطاء مرنة باستخدام Result و anyhow
 
----
+Guardian يحافظ على الاستقرار والمراقبة الدائمة
 
-## 📄 License & Ethical Use
+تصميم Fail-Safe يمنع توقف النظام الكلي
 
-This project is created **for ethical and defensive cybersecurity purposes only.**
-It must **not** be used for unauthorized penetration or testing of systems.
+📄 License & Ethical Use
 
-**Recommended License:** Apache-2.0 License
+تم تطوير المشروع لأغراض أمنية دفاعية وأبحاث سيبرانية أخلاقية فقط.
+يحظر تمامًا استخدامه في أي اختبارات أو أنشطة غير مصرح بها.
 
----
+الرخصة المقترحة: Apache-2.0 License
 
-## 🌍 Future Enhancements
+🌍 Future Enhancements
 
-* Real-time dashboard for live monitoring
-* Dockerized deployment environment
-* Advanced TLS key rotation
-* Autonomous anomaly detection
+لوحة تحكم حية للمراقبة اللحظية
 
----
+بيئة نشر مؤمنة عبر Docker
 
-## 👤 About the Developer
+تدوير مفاتيح TLS ديناميكي
 
-### ✨ **Alaa Mahmoud Mohamed**
+وحدة ذكاء اصطناعي للكشف الذاتي عن التهديدات
 
-Independent Cybersecurity Tools Developer — Creator of **VPN GUARD (SCG)**
+👤 About the Developer
 
-📍 **Location:** Giza, Egypt
-📧 **Email:** [alaat9080@gmail.com](mailto:alaat9080@gmail.com)
-📞 **Phone:** +20 22595905
-💼 **LinkedIn:** [linkedin.com/in/alaa-mahmoud-mohamed-918aba378](https://www.linkedin.com/in/alaa-mahmoud-mohamed-918aba378)
-💻 **GitHub:** [github.com/alaat9080-svg/cyber-security-guard-pro](https://github.com/alaat9080-svg/cyber-security-guard-pro)
+Alaa Mahmoud Mohamed
+مطور أدوات أمن سيبراني مستقل — مبتكر مشروع VPN GUARD (SCG)
 
----
+Location: Giza, Egypt
+Email: alaat9080@gmail.com
 
-> *Crafted with precision, privacy, and purpose — to empower ethical cybersecurity and defend the digital realm.*
+Phone: +20 22595905
+LinkedIn: linkedin.com/in/alaa-mahmoud-mohamed-918aba378
+GitHub: github.com/alaat9080-svg/cyber-security-guard-pro
+
+Crafted with precision, privacy, and purpose — to empower ethical cybersecurity and defend the digital realm.
