--- a/README
+++ b/README
@@ -1,17 +1,156 @@
-🛡️ VPN GUARD (SCG)
+🛡️ VPN GUARD (SCG) — Secure. Adaptive. Ethical.
 
 Advanced Adaptive VPN Protection Framework — integrating intelligent routing, identity management, and deception-based defense.
 
-ترجمة: إطار حماية VPN متقدّم يعتمد على التوجيه الذكي، وإدارة الهوية، والدفاع القائم على الخداع.
-
 ⚙️ Overview
 
-VPN GUARD (SCG) يمثل جيلًا جديدًا من أنظمة الدفاع التكيفية وتوجيه البيانات الآمن.
-تم تصميمه لتحقيق أعلى أداء ومرونة، ويجمع بين المنطق المستوحى من الذكاء الاصطناعي والتشفير الديناميكي والخداع السلوكي داخل نواة VPN خفيفة وسريعة.
+VPN GUARD (SCG) represents a new era of adaptive defense and secure routing systems.
+It’s designed for maximum performance and modular flexibility, merging AI-inspired logic, dynamic encryption, and behavioral deception within a lightweight VPN core.
 
-Core Capabilities:
+Core Capabilities
 
-تحليل متعدد الطبقات (Identity & Deception Engines)
+Multi-layer intelligent analysis (Identity & Deception Engines)
+
+Adaptive encrypted routing with randomized paths
+
+Real-time health monitoring via AegisGuardian Bot
+
+High-speed asynchronous processing using Tokio and SegQueue
+
+Modular, expandable, and fault-tolerant architecture
+
+🧩 System Architecture
+VPN-GUARD/
+├── src/
+│   ├── main.rs
+│   ├── orchestrator.rs
+│   ├── guardian.rs
+│   ├── adaptive_router.rs
+│   ├── analysis_engines/
+│   │   ├── identity.rs
+│   │   └── deception.rs
+│   └── grpc_server.rs
+├── proto/
+│   └── vpn_guard.proto
+├── config/
+│   └── config.example.yaml
+├── docs/
+│   └── architecture.svg
+└── README.md
+
+🧠 Components Breakdown
+🕹️ Orchestrator
+
+The control center that manages data flow from input to adaptive routing.
+
+👁️ AegisGuardian Bot
+
+Runs in a background async task (tokio::spawn), monitoring system health (health_flag, queue_size) through an mpsc alert channel.
+
+🔍 Analysis Engines
+
+IdentityManagementEngine: validates session fingerprints and trust scores.
+
+DeceptionEngine: generates defensive deception responses (honeypot-like behavior).
+
+🌐 AdaptiveRouter
+
+Handles encrypted routing, randomized path generation, and supports geo-aware or weighted routing.
+
+⚡ SegQueue
+
+High-performance internal queue using crossbeam_queue::SegQueue for multi-threaded async processing.
+
+🧭 System Integration & Logic Design
+Organizational Structure
+
+Code is divided into logical modules (AnalysisEngines, AdaptiveRouter, AegisGuardian, AegisOrchestrator).
+Each function and variable is documented with clear intent and role.
+
+AegisGuardian Integration
+
+Directly linked with AegisOrchestrator to monitor internal states.
+Runs independently via tokio::spawn and uses mpsc for clean alert separation.
+
+Advanced Enhancements
+
+IdentityManagementEngine & DeceptionEngine are invoked inside process_request_internally.
+
+AdaptiveRouter executes encrypted routing decisions.
+
+Efficiency improved with SegQueue, tokio::select!, and graceful stop via Notify.
+
+Flexibility & Resilience
+
+Error handling with Result and anyhow.
+
+Fail-safe: individual module failure does not affect system continuity.
+
+Scalable to new analysis modules without altering architecture.
+
+Execution
+
+main function orchestrates all components, spawns the background worker, Guardian, and gRPC server.
+Shared state managed via Arc<Mutex<T>> and Arc<AtomicCell<T>>.
+
+🚀 Running Locally
+cargo run --bin vpn-guard
+grpcurl -plaintext -d '{"id":"1","payload":"SGVsbG8="}' localhost:50051 vpn.Guard/Process
+
+🔒 Security & Reliability
+
+Graceful shutdown with Notify and tokio::select!
+
+Error handling through Result and anyhow
+
+Guardian ensures constant stability and monitoring
+
+Fail-safe design guarantees continued operation
+
+📄 License & Ethical Use
+
+Developed strictly for ethical and defensive cybersecurity research.
+Unauthorized testing or penetration activities are prohibited.
+
+Recommended License: Apache-2.0 License
+
+🌍 Future Enhancements
+
+Live monitoring dashboard
+
+Docker-secured deployment
+
+Dynamic TLS key rotation
+
+AI-based anomaly detection module
+
+👤 About the Developer
+
+Alaa Mahmoud Mohamed
+Independent Cybersecurity Tools Developer — Creator of VPN GUARD (SCG)
+
+Location: Giza, Egypt
+Email: alaat9080@gmail.com
+
+Phone: +20 22595905
+LinkedIn: linkedin.com/in/alaa-mahmoud-mohamed-918aba378
+
+GitHub: github.com/alaat9080-svg/cyber-security-guard-pro
+
+Crafted with precision, privacy, and purpose — empowering ethical cybersecurity to defend the digital realm.
+
+🛡️ VPN GUARD (SCG) — الحماية المتكيّفة الذكية
+
+إطار حماية VPN متقدّم يعتمد على التوجيه الذكي، وإدارة الهوية، والدفاع القائم على الخداع.
+
+⚙️ نظرة عامة
+
+يمثل VPN GUARD (SCG) جيلاً جديدًا من أنظمة الدفاع السيبراني التكيفية وتوجيه البيانات الآمن.
+تم تصميمه لتحقيق أعلى أداء ومرونة، حيث يجمع بين المنطق المستوحى من الذكاء الاصطناعي والتشفير الديناميكي والخداع السلوكي داخل نواة VPN خفيفة وسريعة.
+
+القدرات الأساسية
+
+تحليل متعدد الطبقات (محركات الهوية والخداع)
 
 توجيه مشفّر متكيّف بمسارات عشوائية
 
@@ -19,116 +158,81 @@ Core Capabilities:
 
 معالجة غير متزامنة عالية السرعة باستخدام Tokio و SegQueue
 
-تصميم معياري قابل للتوسع والتطوير
+تصميم معياري قابل للتوسّع والتطوير
 
-🧩 System Architecture
+🧩 الهيكل المعماري للنظام
 
-VPN-GUARD/
-├── src/
-│ ├── main.rs
-│ ├── orchestrator.rs
-│ ├── guardian.rs
-│ ├── adaptive_router.rs
-│ ├── analysis_engines/
-│ │ ├── identity.rs
-│ │ └── deception.rs
-│ └── grpc_server.rs
-├── proto/
-│ └── vpn_guard.proto
-├── config/
-│ └── config.example.yaml
-├── docs/
-│ └── architecture.svg
-└── README.md
+(نفس المخطط أعلاه يُستخدم لتوضيح بنية المشروع)
 
-🧠 Components Breakdown
-
+🧠 مكوّنات النظام
 🕹️ Orchestrator
-وحدة التحكم المركزية التي تدير تدفق البيانات من الاستقبال حتى التحليل والتوجيه النهائي.
+
+وحدة التحكم المركزية التي تدير تدفق البيانات من الاستقبال إلى التوجيه النهائي.
 
 👁️ AegisGuardian Bot
-تعمل كمهمة خلفية مستقلة تراقب مؤشرات الحالة مثل health_flag و queue_size باستخدام قناة mpsc للتنبيهات المنظمة.
 
-🔍 Analysis Engines
+تعمل كمهمة خلفية مستقلة تراقب مؤشرات الصحة (health_flag, queue_size) باستخدام قناة mpsc للتنبيهات.
+
+🔍 محركات التحليل
 
 IdentityManagementEngine: يتحقق من بصمات الجلسات ومستوى الثقة.
 
-DeceptionEngine: ينشئ استجابات دفاعية خادعة تحاكي السلوك التفاعلي لأنظمة الطعم.
+DeceptionEngine: ينشئ استجابات دفاعية خادعة تحاكي أنظمة الطُعم.
 
 🌐 AdaptiveRouter
+
 مسؤول عن التوجيه المشفّر وتوليد المسارات العشوائية مع دعم للتوزيع الجغرافي أو التوزين الديناميكي.
 
 ⚡ SegQueue
-قائمة انتظار داخلية عالية الأداء وآمنة للتعامل المتعدد الخيوط.
 
-🧭 System Integration & Logic Design
+قائمة انتظار داخلية سريعة وآمنة تدعم المعالجة المتعددة الخيوط.
 
-يُظهر هذا القسم كيفية ترابط جميع المكونات داخل النظام لتشكيل بنية متكاملة وذكية.
+🧭 تكامل النظام والتصميم المنطقي
 
-Organizational Structure
-تم تقسيم الكود إلى وحدات منطقية مثل AnalysisEngines و AdaptiveRouter و AegisGuardian و AegisOrchestrator لتسهيل القراءة والصيانة.
-كل دالة ومتغير موثق بالغرض والدور داخل النظام.
+النظام منظم في وحدات منطقية واضحة، مع تكامل تام بين AegisOrchestrator و AegisGuardian.
+تم تحسين الكفاءة باستخدام SegQueue و tokio::select! وآلية إيقاف نظيفة باستخدام Notify.
 
-AegisGuardian Integration
-يرتبط مباشرة بـ AegisOrchestrator لمراقبة الحالة الداخلية.
-يعمل في مهمة tokio::spawn مستقلة، ويرسل التنبيهات عبر قناة mpsc دون التأثير على عمليات التوجيه.
+مرن في مواجهة الأعطال، ويتعامل مع الأخطاء دون توقف، ويمكن توسيعه بسهولة.
 
-Advanced Enhancements
-تم تنفيذ IdentityManagementEngine و DeceptionEngine كمحركات تحليل متكاملة ضمن سلسلة process_request_internally.
-AdaptiveRouter مسؤول عن توليد المسارات المشفرة بعد التحليل.
-تم تحسين الكفاءة باستخدام SegQueue و tokio::select! مع Notify لإدارة الإيقاف النظيف.
-
-Flexibility & Resilience
-النظام مصمم ليكون مرنًا في مواجهة الفشل.
-يتم التعامل مع الأخطاء عبر Result و anyhow دون توقف النظام.
-قابلية التوسع تتيح إضافة وحدات تحليل جديدة دون تغيير الهيكل العام.
-
-Execution
-تبدأ العملية من دالة main التي تجمع كل المكونات، وتبدأ العامل الخلفي، والـ Guardian، وتشغّل خادم gRPC.
-يُستخدم Arc<Mutex<T>> و Arc<AtomicCell<T>> لمشاركة الحالة بأمان بين المهام غير المتزامنة.
-
-🚀 Running Locally
-
+🚀 التشغيل المحلي
 cargo run --bin vpn-guard
 grpcurl -plaintext -d '{"id":"1","payload":"SGVsbG8="}' localhost:50051 vpn.Guard/Process
 
-🔒 Security & Reliability
+🔒 الأمان والاعتمادية
 
-إيقاف أنيق عبر Notify و tokio::select!
+إيقاف منظم باستخدام Notify و tokio::select!
 
 معالجة أخطاء مرنة باستخدام Result و anyhow
 
-Guardian يحافظ على الاستقرار والمراقبة الدائمة
+Guardian يحافظ على استقرار النظام ومراقبته
 
-تصميم Fail-Safe يمنع توقف النظام الكلي
+تصميم Fail-Safe يضمن استمرار التشغيل
 
-📄 License & Ethical Use
+📄 الرخصة والاستخدام الأخلاقي
 
-تم تطوير المشروع لأغراض أمنية دفاعية وأبحاث سيبرانية أخلاقية فقط.
-يحظر تمامًا استخدامه في أي اختبارات أو أنشطة غير مصرح بها.
+تم تطوير المشروع لأغراض دفاعية وأبحاث سيبرانية أخلاقية فقط.
+يُمنع استخدامه في أي نشاطات غير مصرح بها.
 
 الرخصة المقترحة: Apache-2.0 License
 
-🌍 Future Enhancements
+🌍 التطويرات المستقبلية
 
-لوحة تحكم حية للمراقبة اللحظية
+لوحة تحكم حية للمراقبة
 
 بيئة نشر مؤمنة عبر Docker
 
-تدوير مفاتيح TLS ديناميكي
+تدوير ديناميكي لمفاتيح TLS
 
-وحدة ذكاء اصطناعي للكشف الذاتي عن التهديدات
+وحدة ذكاء اصطناعي للكشف التلقائي عن التهديدات
 
-👤 About the Developer
+👤 عن المطوّر
 
-Alaa Mahmoud Mohamed
+علاء محمود محمد
 مطور أدوات أمن سيبراني مستقل — مبتكر مشروع VPN GUARD (SCG)
 
-Location: Giza, Egypt
-Email: alaat9080@gmail.com
+📍 الموقع: الجيزة، مصر
+📧 البريد: alaat9080@gmail.com
 
-Phone: +20 22595905
-LinkedIn: linkedin.com/in/alaa-mahmoud-mohamed-918aba378
-GitHub: github.com/alaat9080-svg/cyber-security-guard-pro
-
-Crafted with precision, privacy, and purpose — to empower ethical cybersecurity and defend the digital realm.
+📞 الهاتف: +20 22595905
+🔗 LinkedIn: linkedin.com/in/alaa-mahmoud-mohamed-918aba378
+💻 GitHub: github.com/alaat9080-svg/cyber-security-guard-pro
